<resources>
    <string name="app_name">ITESO STORE</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="laptops">
        <item>Mac</item>
        <item>Alienware</item>
        <item>Lanix</item>
    </string-array>
    <string name="location">Zapopan</string>
    <string name="phone">3312345678</string>
    <string name="store">Best Buy</string>
    <string name="tab1">HOME</string>
    <string name="tab2">TECHNOLOGY</string>
    <string name="tab3">ELECTRONICS</string>
    <string name="image_activity">Product Image</string>
    <string name="name_activity">Product Name</string>
    <string name="store_activity">Store</string>
    <string name="location_activity">Location</string>
    <string name="phone_activity">Phone</string>
    <string name="save_activity">Save</string>
    <string name="cancel_activity">Cancel</string>
</resources>
